[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Tony Wesley", email = "awesley@gmail.com"},
]
dependencies = [
    "fastapi~=0.67",
    "uvicorn[standard]~=0.14",
    "pulsar-client~=2.8",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
